--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -1,17 +1,10 @@
-
-.u-section-1 .u-sheet-1 {
-  min-height: 1127px;
+.u-section-1{
+  margin: 1.5rem 0 0 0;
 }
-
 .u-section-1 .u-text-1 {
   width: 707px;
-  margin: 59px auto 0;
 }
 
-.u-section-1 .u-layout-wrap-1 {
-  margin-top: 50px;
-  margin-bottom: 60px;
-}
 
 .u-section-1 .u-layout-cell-1 {
   min-height: 838px;
