--- a/public/css/bg.css
+++ b/public/css/bg.css
@@ -56,16 +56,13 @@ a {
 }
 
 .page {
-  height: 100%;
   background-color: transparent;
+  display: flex;
+  justify-content: center;
 }
 
 .main-page-content {
   background-color: transparent;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   text-align: center;
 }
 .main-page-content h1 {
