--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -48,21 +48,32 @@
                   <div class="u-layout-row">
                     <div class="u-size-30 u-size-60-md">
                       <div class="u-layout-col">
-                        <div class="u-container-style u-layout-cell u-radius-10 u-shape-round u-size-60 u-layout-cell-1">
-                          <div class="u-border-2 u-border-palette-4-light-2 u-container-layout u-valign-middle u-container-layout-1">
+                        <div
+                          class="u-container-style u-layout-cell u-radius-10 u-shape-round u-size-60 u-layout-cell-1">
+                          <div
+                            class="u-border-2 u-border-palette-4-light-2 u-container-layout u-valign-middle u-container-layout-1">
                             <div class="u-list u-list-1">
                               <div class="u-repeater u-repeater-1">
                                 <% foods.forEach((food)=> { %>
-                                <div class="u-align-left u-container-style u-gradient u-list-item u-opacity u-opacity-75 u-radius-20 u-repeater-item u-shape-round u-list-item-1">
-                                  <div class="u-container-layout u-similar-container u-container-layout-2">
-                                    <img class="u-border-2 u-border-white u-image u-image-round u-radius-15 u-image-1" alt="" data-image-width="800" data-image-height="604" src="<%= food.image %>">
-                                    <h4 class="u-align-center u-custom-font u-font-montserrat u-text u-text-2"><%= food.title %></h4>
-                                    <a href="" class="u-border-2 u-border-grey-75 u-btn u-btn-round u-button-style u-gradient u-hover-palette-1-base u-none u-radius-50 u-text-body-alt-color u-text-hover-palette-3-base u-btn-1"> &nbsp;<%= food.price %></a>
+                                  <div
+                                    class="u-align-left u-container-style u-gradient u-list-item u-opacity u-opacity-75 u-radius-20 u-repeater-item u-shape-round u-list-item-1">
+                                    <div class="u-container-layout u-similar-container u-container-layout-2">
+                                      <img class="u-border-2 u-border-white u-image u-image-round u-radius-15 u-image-1"
+                                        alt="" data-image-width="800" data-image-height="604" src="<%= food.image %>">
+                                      <h4 class="u-align-center u-custom-font u-font-montserrat u-text u-text-2">
+                                        <%= food.title %>
+                                      </h4>
+                                      <a href="#" 
+                                        onclick="sendOrder(this)" 
+                                        data-title="<%= food.title %>"
+                                        data-price="<%= food.price %>"
+                                        class="u-border-2 u-border-grey-75 u-btn u-btn-round u-button-style u-gradient u-hover-palette-1-base u-none u-radius-50 u-text-body-alt-color u-text-hover-palette-3-base u-btn-1">
+                                        &nbsp;<%= food.price %></a>
+                                    </div>
                                   </div>
-                                </div>
-                                <% }) %>
+                                  <% }) %>
                               </div>
-                            </br>
+                              </br>
                             </div>
                           </div>
                         </div>
@@ -72,18 +83,29 @@
                       <div class="u-layout-col">
                         <div class="u-size-30">
                           <div class="u-layout-row">
-                            <div class="u-container-style u-layout-cell u-radius-10 u-shape-round u-size-60 u-layout-cell-2">
-                              <div class="u-border-2 u-border-palette-4-light-2 u-container-layout u-container-layout-6"></div>
+                            <div
+                              class="u-container-style u-layout-cell u-radius-10 u-shape-round u-size-60 u-layout-cell-2">
+                              <div id="message-container"
+                                class="u-border-2 u-border-palette-4-light-2 u-container-layout u-container-layout-6">
+
+                              </div>
                             </div>
                           </div>
                         </div>
                         <div class="u-size-30">
                           <div class="u-layout-row">
-                            <div class="u-container-style u-layout-cell u-radius-10 u-shape-round u-size-30 u-layout-cell-3">
-                              <div class="u-border-2 u-border-palette-4-light-2 u-container-layout u-container-layout-7"></div>
+                            <div
+                              class="u-container-style u-layout-cell u-radius-10 u-shape-round u-size-30 u-layout-cell-3">
+                              <div id="log-container"
+                                class="u-border-2 u-border-palette-4-light-2 u-container-layout u-container-layout-7">
+
+                              </div>
                             </div>
-                            <div class="u-container-style u-layout-cell u-radius-10 u-shape-round u-size-30 u-layout-cell-4">
-                              <div class="u-border-2 u-border-palette-4-light-2 u-container-layout u-container-layout-8"></div>
+                            <div
+                              class="u-container-style u-layout-cell u-radius-10 u-shape-round u-size-30 u-layout-cell-4">
+                              <div
+                                class="u-border-2 u-border-palette-4-light-2 u-container-layout u-container-layout-8">
+                              </div>
                             </div>
                           </div>
                         </div>
@@ -93,9 +115,9 @@
                 </div>
               </div>
             </div>
-            
-            
-            
+
+
+
           </section>
 
           <!-- <section class="u-backlink u-clearfix u-grey-80">
