--- a/public/css/bg.css
+++ b/public/css/bg.css
@@ -13,7 +13,7 @@
   --scroll-size: 15px;
   --scroll-radius: 20px;
   --scroll-track: rgb(255 255 255 / 10%);
-  --scroll-thumb: linear-gradient(45deg, #00aeff, #a68eff);
+  --scroll-thumb: linear-gradient(45deg, #02198d, #d1d1d124);
 }
 
 ::-webkit-scrollbar {
