--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -29,7 +29,14 @@
 }
 
 .u-section-1 .u-list-item-1 {
-  background-image: linear-gradient(#db545a, #2cccc4);
+  /* background-image: linear-gradient(#c9c9c9, #b7b7b7); */
+  background-color: #2cccc4;
+  border: 2px solid rgb(78 78 78);
+  /* box-shadow: 0px 0px 8px 0px rgba(128,128,128,1); */
+}
+
+.u-section-1 .u-list-item-1:hover {
+  background-color: #2cccc4;
   box-shadow: 0px 0px 8px 0px rgba(128,128,128,1);
 }
 
@@ -45,13 +52,13 @@
 }
 
 .u-section-1 .u-text-2 {
-  text-transform: uppercase;
-  font-size: 1.125rem;
-  letter-spacing: 2px;
-  font-weight: 700;
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  font-weight: 500;
   height: 70px;
   overflow-y: scroll;
   margin: 30px 20px 0;
+  color: white;
 }
 
 .u-section-1 .u-btn-1 {
