--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -1,10 +1,60 @@
+#order-list-title {
+  color: aqua;
+}
+
+.order-list {
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  height: 400px;
+  padding: 5px;
+  box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.06);
+  overflow-y: auto;
+}
+
+.order-list ol {
+  padding-left: 50px;
+}
+
+.order-list li {
+  color: #fcfcfc;
+  padding-left: 16px;
+  margin-top: 24px;
+  position: relative;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.order-list li:before {
+  content: "";
+  display: block;
+  height: 42px;
+  width: 42px;
+  border-radius: 50%;
+  border: 2px solid #ddd;
+  position: absolute;
+  top: -10px;
+  left: -34px;
+}
+
+.order-list strong {
+  color: #ff0000;
+}
+
+.order-list ol.alternating-colors li:nth-child(odd):before {
+  border-color: #0BAD02;
+}
+.order-list ol.alternating-colors li:nth-child(even):before {
+  border-color: #0BAD02;
+}
+
+/* MENU SECTION */
 .u-section-1{
   margin: 1.5rem 0 0 0;
 }
 .u-section-1 .u-text-1 {
   width: 707px;
 }
-
 
 .u-section-1 .u-layout-cell-1 {
   min-height: 838px;
