--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -4,7 +4,6 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
-  <meta name="keywords" content="Connected Users, Orders List, Best Seller​, Summary Orders, Our ​Breads">
   <meta name="description" content="">
   <title>Home</title>
   <link rel="stylesheet" href="/css/nicepage.css" media="screen">
@@ -23,8 +22,6 @@
     href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
   <link id="u-page-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
-
-
 
   <script type="application/ld+json">{
 		"@context": "http://schema.org",
@@ -63,9 +60,7 @@
                                       <h4 class="u-align-center u-custom-font u-font-montserrat u-text u-text-2">
                                         <%= food.title %>
                                       </h4>
-                                      <a href="#" 
-                                        onclick="sendOrder(this)" 
-                                        data-title="<%= food.title %>"
+                                      <a href="#" onclick="sendOrder(this)" data-title="<%= food.title %>"
                                         data-price="<%= food.price %>"
                                         class="u-border-2 u-border-grey-75 u-btn u-btn-round u-button-style u-gradient u-hover-palette-1-base u-none u-radius-50 u-text-body-alt-color u-text-hover-palette-3-base u-btn-1">
                                         &nbsp;<%= food.price %></a>
@@ -85,8 +80,22 @@
                           <div class="u-layout-row">
                             <div
                               class="u-container-style u-layout-cell u-radius-10 u-shape-round u-size-60 u-layout-cell-2">
-                              <div id="message-container"
+                              <div id="order-container"
                                 class="u-border-2 u-border-palette-4-light-2 u-container-layout u-container-layout-6">
+
+                                <strong id="order-list-title">Order List</strong>
+                                <div class="order-list">
+
+                                  <ol class="alternating-colors" id="display-order">
+
+                                    <!-- <li>
+                                      <strong id="order-user">Half-Life 2</strong>
+                                      <p id="order-info">Fight aliens, wear a head crab, learn about gravity</p>
+                                    </li> -->
+
+                                  </ol>
+
+                                </div>
 
                               </div>
                             </div>
