--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -60,7 +60,7 @@
                                       <h4 class="u-align-center u-custom-font u-font-montserrat u-text u-text-2">
                                         <%= food.title %>
                                       </h4>
-                                      <a href="#" onclick="sendOrder(this)" data-title="<%= food.title %>"
+                                      <a href="" onclick="sendOrder(this)" data-title="<%= food.title %>"
                                         data-price="<%= food.price %>"
                                         class="u-border-2 u-border-grey-75 u-btn u-btn-round u-button-style u-gradient u-hover-palette-1-base u-none u-radius-50 u-text-body-alt-color u-text-hover-palette-3-base u-btn-1">
                                         &nbsp;<%= food.price %></a>
