popup gather user name

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -129,6 +129,12 @@
 
           </section>
 
+          <div class="text-wrapper" id="inputForm">
+            <h3>What should i call you?</h3>
+            <p><input type="text" value="" id="userName"></p>
+            <button class="button button-yes" id="confirmBtn"> Yes, please!</button>
+          </div>
+
           <!-- <section class="u-backlink u-clearfix u-grey-80">
             <a class="u-link" href="https://github.com/khanhnguyendev/OrderShopeeFood" target="_blank">
               <span>
