--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -1,3 +1,47 @@
+.text-wrapper {
+  text-align: center;
+  position: absolute;
+  width: 300px;
+  height: 180px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-image: linear-gradient(to right, #E731CB, #7143E9);
+  border-radius: 20px;
+}
+
+#userName {
+  border-radius: 20px;
+}
+
+.text-wrapper h3 {
+  font-size: 18px;
+}
+
+.text-wrapper p {
+  margin: 10px 0px 20px 0px;
+  font-size: 16px;
+  color: #454545;
+}
+.text-wrapper .button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-weight: 600;
+  border: none;
+  margin: 0px 5px;
+  height: 40px;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.text-wrapper .button-yes {
+  background-color: #d231e7;
+  color: #FFF;
+}
+.text-wrapper .button-yes:hover {
+  background-image: none;
+  background-color: #aa31e7;
+}
+
 #order-list-title {
   color: aqua;
 }
