--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -60,7 +60,7 @@
                                       <h4 class="u-align-center u-custom-font u-font-montserrat u-text u-text-2">
                                         <%= food.title %>
                                       </h4>
-                                      <a href="" onclick="sendOrder(this)" data-title="<%= food.title %>"
+                                      <a onclick="sendOrder(this)" data-title="<%= food.title %>"
                                         data-price="<%= food.price %>"
                                         class="u-border-2 u-border-grey-75 u-btn u-btn-round u-button-style u-gradient u-hover-palette-1-base u-none u-radius-50 u-text-body-alt-color u-text-hover-palette-3-base u-btn-1">
                                         &nbsp;<%= food.price %></a>
@@ -129,10 +129,10 @@
 
           </section>
 
-          <div class="text-wrapper" id="inputForm">
+          <div class="text-wrapper" id="inputForm" style="display: none;">
             <h3>What should i call you?</h3>
             <p><input type="text" value="" id="userName"></p>
-            <button class="button button-yes" id="confirmBtn"> Yes, please!</button>
+            <button class="button button-yes" id="confirmBtn" onclick="confirmUserName()"> Yes, please!</button>
           </div>
 
           <!-- <section class="u-backlink u-clearfix u-grey-80">
