--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -136,11 +136,11 @@
                               <div id="order-container"
                                 class="u-border-2 u-border-palette-4-light-2 u-container-layout u-container-layout-6">
 
+                                <!-- ORDER DETAIL -->
                                 <strong id="order-list-title">Order List</strong>
                                 <div class="order-list">
 
                                   <ol class="alternating-colors" id="display-order">
-
                                     <% orders.forEach((orderDetail)=> { %>
                                       <li>
                                         <strong id="order-user">
@@ -151,10 +151,10 @@
                                         </p>
                                       </li>
                                       <% }) %>
-
                                   </ol>
 
                                 </div>
+                                <!-- ORDER DETAIL -->
 
                               </div>
                             </div>
