--- a/public/css/nicepage.css
+++ b/public/css/nicepage.css
@@ -23431,7 +23431,7 @@ h6 {
   color: #ffffff;
 }
 .u-body {
-  color: #111111;
+  color: #ffffff;
   background-color: #ffffff;
   --effect-scale: 1.1;
 }
