--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -244,6 +244,58 @@ html {
 }
 
 /* List Order Detail */
+.orders-list {
+  max-width: 500px;
+  height: 400px;
+  padding: 5px;
+  box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.06);
+  overflow: auto;
+}
+
+ol {
+  counter-reset: li;
+  list-style: none;
+  padding: 0;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
+}
+
+ol span {
+  position: relative;
+  display: block;
+  padding: .4em .4em .4em 2.5em;
+  margin: .5em 0;
+  color: rgb(255, 255, 255);
+  box-shadow: 0px 0px 8px 0px rgba(128, 128, 128, 1);
+  text-decoration: none;
+  border-radius: .3em;
+  transition: .3s ease-out;
+}
+
+ol span:hover {
+  background: #E9E4E0;
+  cursor: pointer;
+}
+
+ol span:hover:before {
+  transform: rotate(360deg);
+}
+
+ol span:before {
+  content: counter(li);
+  counter-increment: li;
+  position: absolute;
+  left: 0.2em;
+  top: 60%;
+  margin-top: -1.3em;
+  background: #03e2ff;
+  height: 2em;
+  width: 2em;
+  border: .3em solid #fff;
+  text-align: center;
+  font-weight: bold;
+  border-radius: 2em;
+  transition: all .3s ease-out;
+}
 
 /* MENU SECTION */
 .u-section-1 {
