--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -14,9 +14,9 @@
   <script defer src="http://192.168.33.21:3000/socket.io/socket.io.js"></script>
   <script defer src="script.js"></script>
   <script defer src="background.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://assets.codepen.io/16327/MorphSVGPlugin3.min.js"></script>
-  <script src="https://assets.codepen.io/16327/Physics2DPlugin3.min.js"></script>
+  <script src="https://assets.codepen.io/16327/Physics2DPlugin3.min.js"></script> -->
 
   <script>
     const roomName = "<%= roomName %>"
@@ -68,7 +68,7 @@
                                         data-price="<%= food.price %>"
                                         class="u-border-2 u-border-grey-75 u-btn u-btn-round u-button-style u-gradient u-hover-palette-1-base u-none u-radius-50 u-text-body-alt-color u-text-hover-palette-3-base u-btn-1">
                                         &nbsp;<%= food.price %></a> -->
-                                      <!-- <button class="button-order u-btn-1" onclick="sendOrder(this)" data-title="<%= food.title %>"
+                                      <button class="button-order u-btn-1" onclick="sendOrder(this)" data-title="<%= food.title %>"
                                         data-price="<%= food.price %>">
                                         <div class="wrapper">
                                           <span><%= food.price %></span>
@@ -85,9 +85,9 @@
                                           <div class="circle circle-2"></div>
                                           <div class="circle circle-1"></div>
                                         </div>
-                                      </button> -->
+                                      </button>
 
-                                      <button class="add-to-cart" onclick="sendOrder(this)"
+                                      <!-- <button class="add-to-cart" onclick="sendOrder(this)"
                                         data-title="<%= food.title %>" data-price="<%= food.price %>">
                                         <div class="cart">
                                           <svg viewBox="0 0 24 19">
@@ -116,7 +116,7 @@
                                           <path
                                             d="M0 19C0 10.7157 6.71573 4 15 4H41.4599C53.6032 4 62.4844 4 72.5547 4C82.6251 4 91.5063 4 103.65 4H137C139.761 4 142 6.23858 142 9V31C142 39.2843 135.284 46 127 46H5C2.23858 46 0 43.7614 0 41V19Z" />
                                         </svg>
-                                      </button>
+                                      </button> -->
                                     </div>
                                   </div>
                                   <% }) %>
