fix submit when order

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -68,7 +68,7 @@
                                         data-price="<%= food.price %>"
                                         class="u-border-2 u-border-grey-75 u-btn u-btn-round u-button-style u-gradient u-hover-palette-1-base u-none u-radius-50 u-text-body-alt-color u-text-hover-palette-3-base u-btn-1">
                                         &nbsp;<%= food.price %></a> -->
-                                      <button class="button-order u-btn-1" onclick="sendOrder(this)" data-title="<%= food.title %>"
+                                      <button type="button" class="button-order u-btn-1" onclick="sendOrder(this)" data-title="<%= food.title %>"
                                         data-price="<%= food.price %>">
                                         <div class="wrapper">
                                           <span><%= food.price %></span>
