--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -1,30 +1,73 @@
-.text-wrapper {
+/** POPUP DEFINE USERNAME */
+.popup {
+  z-index: 10000;
   text-align: center;
-  position: absolute;
+  position: fixed;
   width: 300px;
-  height: 180px;
+  height: 230px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-image: linear-gradient(to right, #E731CB, #7143E9);
-  border-radius: 20px;
+  background: #031549;
+  text-align: center;
+  box-shadow: -1px 92px 99px -62px rgba(3, 107, 255, 0.27), 0 1px 6px 0 rgba(10, 48, 255, 0.48);
+  border-radius: 5px;
 }
 
-#userName {
-  border-radius: 20px;
+.popup input,
+.popup input {
+  border: 0;
+  background: none;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #3498db;
+  padding: 14px 10px;
+  width: 250px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  transition: 0.25s;
+
 }
 
-.text-wrapper h3 {
+.popup input[type="text"]:focus {
+  width: 280px;
+  -webkit-animation: 9s colorChange alternate;
+  transition height 0.3s,
+  width 0.3s 0.1s input: focus ~ .border
+}
+
+.popup input[type="submit"] {
+  width: 160px;
+  background: none;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #2ecc71;
+  padding: 14px 40px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  transition: 0.25s;
+  cursor: pointer;
+}
+
+.popup input[type="submit"]:hover {
+  background: #2ecc71;
+}
+
+.popup h3 {
   font-size: 18px;
 }
 
-.text-wrapper p {
+.popup p {
   margin: 10px 0px 20px 0px;
   font-size: 16px;
   color: #454545;
 }
 
-.text-wrapper .button {
+.popup .button {
   padding: 10px 20px;
   border-radius: 5px;
   font-weight: 600;
@@ -35,16 +78,22 @@
   cursor: pointer;
 }
 
-.text-wrapper .button-yes {
-  background-color: #d231e7;
-  color: #FFF;
+#userName {
+  border-radius: 20px;
 }
 
-.text-wrapper .button-yes:hover {
+.popup .button-yes {
+  background-color: #31d2e7;
+  color: #FFF;
+  margin-bottom: 10px;
+}
+
+.popup .button-yes:hover {
   background-image: none;
   background-color: #aa31e7;
 }
 
+/** ORDER LIST */
 #order-list-title {
   color: aqua;
 }
@@ -178,6 +227,7 @@
   border-radius: 24px;
   box-shadow: inset 0 3px 12px var(--c-shadow-inset-top), inset 0 -3px 4px var(--c-shadow-inset-bottom);
 }
+
 .button-order .wrapper {
   -webkit-mask-image: -webkit-radial-gradient(white, black);
   overflow: hidden;
@@ -185,11 +235,13 @@
   min-width: 132px;
   padding: 12px 0;
 }
+
 .button-order .wrapper span {
   display: inline-block;
   position: relative;
   z-index: 1;
 }
+
 .button-order .wrapper .circle {
   position: absolute;
   left: 0;
@@ -201,78 +253,102 @@
   background: var(--background, transparent);
   transform: translate(var(--x, 0), var(--y, 0)) translateZ(0);
   -webkit-animation: var(--animation, none) var(--duration) var(--easing) infinite;
-          animation: var(--animation, none) var(--duration) var(--easing) infinite;
+  animation: var(--animation, none) var(--duration) var(--easing) infinite;
 }
-.button-order .wrapper .circle.circle-1, .button-order .wrapper .circle.circle-9, .button-order .wrapper .circle.circle-10 {
+
+.button-order .wrapper .circle.circle-1,
+.button-order .wrapper .circle.circle-9,
+.button-order .wrapper .circle.circle-10 {
   --background: var(--c-color-4);
 }
-.button-order .wrapper .circle.circle-3, .button-order .wrapper .circle.circle-4 {
+
+.button-order .wrapper .circle.circle-3,
+.button-order .wrapper .circle.circle-4 {
   --background: var(--c-color-2);
   --blur: 14px;
 }
-.button-order .wrapper .circle.circle-5, .button-order .wrapper .circle.circle-6 {
+
+.button-order .wrapper .circle.circle-5,
+.button-order .wrapper .circle.circle-6 {
   --background: var(--c-color-3);
   --blur: 16px;
 }
-.button-order .wrapper .circle.circle-2, .button-order .wrapper .circle.circle-7, .button-order .wrapper .circle.circle-8, .button-order .wrapper .circle.circle-11, .button-order .wrapper .circle.circle-12 {
+
+.button-order .wrapper .circle.circle-2,
+.button-order .wrapper .circle.circle-7,
+.button-order .wrapper .circle.circle-8,
+.button-order .wrapper .circle.circle-11,
+.button-order .wrapper .circle.circle-12 {
   --background: var(--c-color-1);
   --blur: 12px;
 }
+
 .button-order .wrapper .circle.circle-1 {
   --x: 0;
   --y: -40px;
   --animation: circle-1;
 }
+
 .button-order .wrapper .circle.circle-2 {
   --x: 92px;
   --y: 8px;
   --animation: circle-2;
 }
+
 .button-order .wrapper .circle.circle-3 {
   --x: -12px;
   --y: -12px;
   --animation: circle-3;
 }
+
 .button-order .wrapper .circle.circle-4 {
   --x: 80px;
   --y: -12px;
   --animation: circle-4;
 }
+
 .button-order .wrapper .circle.circle-5 {
   --x: 12px;
   --y: -4px;
   --animation: circle-5;
 }
+
 .button-order .wrapper .circle.circle-6 {
   --x: 56px;
   --y: 16px;
   --animation: circle-6;
 }
+
 .button-order .wrapper .circle.circle-7 {
   --x: 8px;
   --y: 28px;
   --animation: circle-7;
 }
+
 .button-order .wrapper .circle.circle-8 {
   --x: 28px;
   --y: -4px;
   --animation: circle-8;
 }
+
 .button-order .wrapper .circle.circle-9 {
   --x: 20px;
   --y: -12px;
   --animation: circle-9;
 }
+
 .button-order .wrapper .circle.circle-10 {
   --x: 64px;
   --y: 16px;
   --animation: circle-10;
 }
+
 .button-order .wrapper .circle.circle-11 {
   --x: 4px;
   --y: 4px;
   --animation: circle-11;
 }
+
 .button-order .wrapper .circle.circle-12 {
   --blur: 14px;
   --x: 52px;
@@ -284,6 +360,7 @@
   33% {
     transform: translate(0px, 16px) translateZ(0);
   }
+
   66% {
     transform: translate(12px, 64px) translateZ(0);
   }
@@ -293,186 +370,232 @@
   33% {
     transform: translate(0px, 16px) translateZ(0);
   }
+
   66% {
     transform: translate(12px, 64px) translateZ(0);
   }
 }
+
 @-webkit-keyframes circle-2 {
   33% {
     transform: translate(80px, -10px) translateZ(0);
   }
+
   66% {
     transform: translate(72px, -48px) translateZ(0);
   }
 }
+
 @keyframes circle-2 {
   33% {
     transform: translate(80px, -10px) translateZ(0);
   }
+
   66% {
     transform: translate(72px, -48px) translateZ(0);
   }
 }
+
 @-webkit-keyframes circle-3 {
   33% {
     transform: translate(20px, 12px) translateZ(0);
   }
+
   66% {
     transform: translate(12px, 4px) translateZ(0);
   }
 }
+
 @keyframes circle-3 {
   33% {
     transform: translate(20px, 12px) translateZ(0);
   }
+
   66% {
     transform: translate(12px, 4px) translateZ(0);
   }
 }
+
 @-webkit-keyframes circle-4 {
   33% {
     transform: translate(76px, -12px) translateZ(0);
   }
+
   66% {
     transform: translate(112px, -8px) translateZ(0);
   }
 }
+
 @keyframes circle-4 {
   33% {
     transform: translate(76px, -12px) translateZ(0);
   }
+
   66% {
     transform: translate(112px, -8px) translateZ(0);
   }
 }
+
 @-webkit-keyframes circle-5 {
   33% {
     transform: translate(84px, 28px) translateZ(0);
   }
+
   66% {
     transform: translate(40px, -32px) translateZ(0);
   }
 }
+
 @keyframes circle-5 {
   33% {
     transform: translate(84px, 28px) translateZ(0);
   }
+
   66% {
     transform: translate(40px, -32px) translateZ(0);
   }
 }
+
 @-webkit-keyframes circle-6 {
   33% {
     transform: translate(28px, -16px) translateZ(0);
   }
+
   66% {
     transform: translate(76px, -56px) translateZ(0);
   }
 }
+
 @keyframes circle-6 {
   33% {
     transform: translate(28px, -16px) translateZ(0);
   }
+
   66% {
     transform: translate(76px, -56px) translateZ(0);
   }
 }
+
 @-webkit-keyframes circle-7 {
   33% {
     transform: translate(8px, 28px) translateZ(0);
   }
+
   66% {
     transform: translate(20px, -60px) translateZ(0);
   }
 }
+
 @keyframes circle-7 {
   33% {
     transform: translate(8px, 28px) translateZ(0);
   }
+
   66% {
     transform: translate(20px, -60px) translateZ(0);
   }
 }
+
 @-webkit-keyframes circle-8 {
   33% {
     transform: translate(32px, -4px) translateZ(0);
   }
+
   66% {
     transform: translate(56px, -20px) translateZ(0);
   }
 }
+
 @keyframes circle-8 {
   33% {
     transform: translate(32px, -4px) translateZ(0);
   }
+
   66% {
     transform: translate(56px, -20px) translateZ(0);
   }
 }
+
 @-webkit-keyframes circle-9 {
   33% {
     transform: translate(20px, -12px) translateZ(0);
   }
+
   66% {
     transform: translate(80px, -8px) translateZ(0);
   }
 }
+
 @keyframes circle-9 {
   33% {
     transform: translate(20px, -12px) translateZ(0);
   }
+
   66% {
     transform: translate(80px, -8px) translateZ(0);
   }
 }
+
 @-webkit-keyframes circle-10 {
   33% {
     transform: translate(68px, 20px) translateZ(0);
   }
+
   66% {
     transform: translate(100px, 28px) translateZ(0);
   }
 }
+
 @keyframes circle-10 {
   33% {
     transform: translate(68px, 20px) translateZ(0);
   }
+
   66% {
     transform: translate(100px, 28px) translateZ(0);
   }
 }
+
 @-webkit-keyframes circle-11 {
   33% {
     transform: translate(4px, 4px) translateZ(0);
   }
+
   66% {
     transform: translate(68px, 20px) translateZ(0);
   }
 }
+
 @keyframes circle-11 {
   33% {
     transform: translate(4px, 4px) translateZ(0);
   }
+
   66% {
     transform: translate(68px, 20px) translateZ(0);
   }
 }
+
 @-webkit-keyframes circle-12 {
   33% {
     transform: translate(56px, 0px) translateZ(0);
   }
+
   66% {
     transform: translate(60px, -32px) translateZ(0);
   }
 }
+
 @keyframes circle-12 {
   33% {
     transform: translate(56px, 0px) translateZ(0);
   }
+
   66% {
     transform: translate(60px, -32px) translateZ(0);
   }
 }
+
 html {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
@@ -481,7 +604,9 @@ html {
 * {
   box-sizing: inherit;
 }
-*:before, *:after {
+
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -494,22 +619,26 @@ body {
   align-items: center;
   background: #1B1E4F;
 }
+
 body .dribbble {
   position: fixed;
   display: block;
   right: 20px;
   bottom: 20px;
 }
+
 body .dribbble img {
   display: block;
   width: 76px;
 }
+
 body .twitter {
   position: fixed;
   display: block;
   right: 112px;
   bottom: 14px;
 }
+
 body .twitter svg {
   width: 24px;
   height: 24px;
