--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,10 +10,10 @@
   <link href="/css/bg.css" rel="stylesheet">
   <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-  <script defer src="script.js"></script>
-  <script defer src="createroom.js"></script>
-  <script defer src="background.js"></script>
+  <script defer src="/script/jquery.min.js"></script>
+  <script defer src="/script/script.js"></script>
+  <script defer src="/script/createroom.js"></script>
+  <script defer src="/script/background.js"></script>
 </head>
 
 <body>
