--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -6,14 +6,16 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <title>Home</title>
+
   <link rel="stylesheet" href="/css/nicepage.css" media="screen">
   <link rel="stylesheet" href="/css/menu.css" media="screen">
   <link rel="stylesheet" href="/css/bg.css">
-  <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
-  <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
+
   <script defer src="http://192.168.33.21:3000/socket.io/socket.io.js"></script>
-  <script defer src="script.js"></script>
-  <script defer src="background.js"></script>
+  <script defer src="/script/jquery.js" ></script>
+  <script defer src="/script/nicepage.js"></script>
+  <script defer src="/script/script.js"></script>
+  <script defer src="/script/background.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://assets.codepen.io/16327/MorphSVGPlugin3.min.js"></script>
   <script src="https://assets.codepen.io/16327/Physics2DPlugin3.min.js"></script> -->
@@ -202,7 +204,7 @@
           <div class="popup" id="popup-username" style="display: none;">
             <h2>What should i call you?</h2>
             <input id="userName" type="text" placeholder="Your Name" required>
-            <input id="create-room" type="submit" value="Yes, please!">
+            <input id="confirmBtn" onclick="confirmUserName()" value="Yes, please!">
           </div>
 
           <!-- <section class="u-backlink u-clearfix u-grey-80">
