--- a/views/room.ejs
+++ b/views/room.ejs
@@ -154,8 +154,8 @@
 
     </section>
 
-
-    <div class="universe">
+    <!-- BACKGROUND -->
+    <!-- <div class="universe">
       <div class="universe-container">
         <div class="content">
           <canvas id="universe"></canvas>
@@ -280,7 +280,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
+    <!-- BACKGROUND -->
+    
   </div>
 
 </body>
