--- a/public/css/room.css
+++ b/public/css/room.css
@@ -3,10 +3,6 @@ html {
   -webkit-font-smoothing: antialiased;
 }
 
-* {
-  background-color: #222831 !important;
-}
-
 *:before,
 *:after {
   box-sizing: inherit;
@@ -19,6 +15,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #222831 !important;
 }
 
 body .dribbble {
@@ -179,601 +176,25 @@ body .twitter svg {
 
 /* Order Button */
 .button-order {
-  --duration: 7s;
-  --easing: linear;
-  --c-color-1: rgba(26, 171, 255, 0.7);
-  --c-color-2: #1A23FF;
-  --c-color-3: #E21BDA;
-  --c-color-4: rgba(255, 232, 26, 0.7);
-  /* --c-shadow: rgba(255, 223, 87, 0.5);
-  --c-shadow-inset-top: rgba(255, 223, 52, 0.9);
-  --c-shadow-inset-bottom: rgba(255, 250, 215, 0.8);
-  --c-radial-inner: #FFD215;
-  --c-radial-outer: #FFF172; */
-  --c-color: #fff;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-appearance: none;
-  outline: none;
-  position: relative;
   cursor: pointer;
-  border: none;
-  display: table;
-  border-radius: 24px;
-  padding: 0;
-  margin: 0;
-  text-align: center;
-  font-family: "Inter";
-  font-weight: 600;
-  font-size: 16px;
-  letter-spacing: 0.02em;
-  line-height: 1.5;
-  color: var(--c-color);
-  background: radial-gradient(circle, var(--c-radial-inner), var(--c-radial-outer) 80%);
-  box-shadow: 0 0 14px var(--c-shadow);
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 1em;
+  letter-spacing: 0.1em;
+  text-decoration: none;
+  color: #FF2E63;
+  display: inline-block;
+  padding: 10px 20px 10px 20px;
+  border: 3px solid #EAEAEA;
+  border-radius: 20px;
+  margin: 10px 0;
 }
 
 .button-order:hover {
-  --duration: 3s;
-  --easing: linear;
-  --c-color-1: rgba(0, 255, 115, 0.7);
-  --c-color-2: #00f5fd;
-  --c-color-3: #E21BDA;
-  --c-color-4: rgba(255, 232, 26, 0.7);
-  --c-shadow: rgba(250, 111, 255, 0.5);
-  --c-shadow-inset-top: rgba(255, 223, 52, 0.9);
-  --c-shadow-inset-bottom: rgba(255, 250, 215, 0.8);
-  --c-radial-inner: #FFD215;
-  --c-radial-outer: #FFF172;
-  --c-color: #fff;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-appearance: none;
-  outline: none;
-  position: relative;
-  cursor: pointer;
-  border: none;
-  display: table;
-  border-radius: 24px;
-  padding: 0;
-  margin: 0;
-  text-align: center;
-  font-family: "Inter";
-  font-weight: 600;
-  font-size: 16px;
-  letter-spacing: 0.02em;
-  line-height: 1.5;
-  color: var(--c-color);
-  background: radial-gradient(circle, var(--c-radial-inner), var(--c-radial-outer) 80%);
-  box-shadow: 0 0 14px var(--c-shadow);
+  background-color: #FF2E63;
+  color: #ffffff;
+  border: 3px solid #FF2E63;
 }
-
-
-.button-order:before {
-  content: "";
-  pointer-events: none;
-  position: absolute;
-  z-index: 3;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  border-radius: 24px;
-  box-shadow: inset 0 3px 12px var(--c-shadow-inset-top), inset 0 -3px 4px var(--c-shadow-inset-bottom);
-}
-
-.button-order .wrapper {
-  -webkit-mask-image: -webkit-radial-gradient(white, black);
-  overflow: hidden;
-  border-radius: 24px;
-  min-width: 132px;
-  padding: 12px 0;
-}
-
-.button-order .wrapper span {
-  display: inline-block;
-  position: relative;
-  z-index: 1;
-}
-
-.button-order .wrapper .circle {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  filter: blur(var(--blur, 8px));
-  background: var(--background, transparent);
-  transform: translate(var(--x, 0), var(--y, 0)) translateZ(0);
-  -webkit-animation: var(--animation, none) var(--duration) var(--easing) infinite;
-  animation: var(--animation, none) var(--duration) var(--easing) infinite;
-}
-
-.button-order .wrapper .circle.circle-1,
-.button-order .wrapper .circle.circle-9,
-.button-order .wrapper .circle.circle-10 {
-  --background: var(--c-color-4);
-}
-
-.button-order .wrapper .circle.circle-3,
-.button-order .wrapper .circle.circle-4 {
-  --background: var(--c-color-2);
-  --blur: 14px;
-}
-
-.button-order .wrapper .circle.circle-5,
-.button-order .wrapper .circle.circle-6 {
-  --background: var(--c-color-3);
-  --blur: 16px;
-}
-
-.button-order .wrapper .circle.circle-2,
-.button-order .wrapper .circle.circle-7,
-.button-order .wrapper .circle.circle-8,
-.button-order .wrapper .circle.circle-11,
-.button-order .wrapper .circle.circle-12 {
-  --background: var(--c-color-1);
-  --blur: 12px;
-}
-
-.button-order .wrapper .circle.circle-1 {
-  --x: 0;
-  --y: -40px;
-  --animation: circle-1;
-}
-
-.button-order .wrapper .circle.circle-2 {
-  --x: 92px;
-  --y: 8px;
-  --animation: circle-2;
-}
-
-.button-order .wrapper .circle.circle-3 {
-  --x: -12px;
-  --y: -12px;
-  --animation: circle-3;
-}
-
-.button-order .wrapper .circle.circle-4 {
-  --x: 80px;
-  --y: -12px;
-  --animation: circle-4;
-}
-
-.button-order .wrapper .circle.circle-5 {
-  --x: 12px;
-  --y: -4px;
-  --animation: circle-5;
-}
-
-.button-order .wrapper .circle.circle-6 {
-  --x: 56px;
-  --y: 16px;
-  --animation: circle-6;
-}
-
-.button-order .wrapper .circle.circle-7 {
-  --x: 8px;
-  --y: 28px;
-  --animation: circle-7;
-}
-
-.button-order .wrapper .circle.circle-8 {
-  --x: 28px;
-  --y: -4px;
-  --animation: circle-8;
-}
-
-.button-order .wrapper .circle.circle-9 {
-  --x: 20px;
-  --y: -12px;
-  --animation: circle-9;
-}
-
-.button-order .wrapper .circle.circle-10 {
-  --x: 64px;
-  --y: 16px;
-  --animation: circle-10;
-}
-
-.button-order .wrapper .circle.circle-11 {
-  --x: 4px;
-  --y: 4px;
-  --animation: circle-11;
-}
-
-.button-order .wrapper .circle.circle-12 {
-  --blur: 14px;
-  --x: 52px;
-  --y: 4px;
-  --animation: circle-12;
-}
-
-@-webkit-keyframes circle-1 {
-  33% {
-    transform: translate(0px, 16px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(12px, 64px) translateZ(0);
-  }
-}
-
-@keyframes circle-1 {
-  33% {
-    transform: translate(0px, 16px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(12px, 64px) translateZ(0);
-  }
-}
-
-@-webkit-keyframes circle-2 {
-  33% {
-    transform: translate(80px, -10px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(72px, -48px) translateZ(0);
-  }
-}
-
-@keyframes circle-2 {
-  33% {
-    transform: translate(80px, -10px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(72px, -48px) translateZ(0);
-  }
-}
-
-@-webkit-keyframes circle-3 {
-  33% {
-    transform: translate(20px, 12px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(12px, 4px) translateZ(0);
-  }
-}
-
-@keyframes circle-3 {
-  33% {
-    transform: translate(20px, 12px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(12px, 4px) translateZ(0);
-  }
-}
-
-@-webkit-keyframes circle-4 {
-  33% {
-    transform: translate(76px, -12px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(112px, -8px) translateZ(0);
-  }
-}
-
-@keyframes circle-4 {
-  33% {
-    transform: translate(76px, -12px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(112px, -8px) translateZ(0);
-  }
-}
-
-@-webkit-keyframes circle-5 {
-  33% {
-    transform: translate(84px, 28px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(40px, -32px) translateZ(0);
-  }
-}
-
-@keyframes circle-5 {
-  33% {
-    transform: translate(84px, 28px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(40px, -32px) translateZ(0);
-  }
-}
-
-@-webkit-keyframes circle-6 {
-  33% {
-    transform: translate(28px, -16px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(76px, -56px) translateZ(0);
-  }
-}
-
-@keyframes circle-6 {
-  33% {
-    transform: translate(28px, -16px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(76px, -56px) translateZ(0);
-  }
-}
-
-@-webkit-keyframes circle-7 {
-  33% {
-    transform: translate(8px, 28px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(20px, -60px) translateZ(0);
-  }
-}
-
-@keyframes circle-7 {
-  33% {
-    transform: translate(8px, 28px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(20px, -60px) translateZ(0);
-  }
-}
-
-@-webkit-keyframes circle-8 {
-  33% {
-    transform: translate(32px, -4px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(56px, -20px) translateZ(0);
-  }
-}
-
-@keyframes circle-8 {
-  33% {
-    transform: translate(32px, -4px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(56px, -20px) translateZ(0);
-  }
-}
-
-@-webkit-keyframes circle-9 {
-  33% {
-    transform: translate(20px, -12px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(80px, -8px) translateZ(0);
-  }
-}
-
-@keyframes circle-9 {
-  33% {
-    transform: translate(20px, -12px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(80px, -8px) translateZ(0);
-  }
-}
-
-@-webkit-keyframes circle-10 {
-  33% {
-    transform: translate(68px, 20px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(100px, 28px) translateZ(0);
-  }
-}
-
-@keyframes circle-10 {
-  33% {
-    transform: translate(68px, 20px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(100px, 28px) translateZ(0);
-  }
-}
-
-@-webkit-keyframes circle-11 {
-  33% {
-    transform: translate(4px, 4px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(68px, 20px) translateZ(0);
-  }
-}
-
-@keyframes circle-11 {
-  33% {
-    transform: translate(4px, 4px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(68px, 20px) translateZ(0);
-  }
-}
-
-@-webkit-keyframes circle-12 {
-  33% {
-    transform: translate(56px, 0px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(60px, -32px) translateZ(0);
-  }
-}
-
-@keyframes circle-12 {
-  33% {
-    transform: translate(56px, 0px) translateZ(0);
-  }
-
-  66% {
-    transform: translate(60px, -32px) translateZ(0);
-  }
-}
-
-/* Order Button GSAP*/
-/* .add-to-cart {
-  transform: translate(42px, 18px);
-  --color: #000;
-  --background: #fff;
-  --drop: #38E739;
-  --background-s: 1;
-  --text-o: 1;
-  --text-x: 10px;
-  --bottle-x: -40%;
-  --bottle-y: -60px;
-  --bottle-s: .4;
-  --bottle-r: 0deg;
-  --bottle-o: 0;
-  --cart-x: -57px;
-  --cart-y: -2px;
-  --cart-r: 0deg;
-  --cart-s: 0.8;
-  --check-y: 0px;
-  --check-s: 0;
-  --check-offset: 8.5px;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-appearance: none;
-  outline: none;
-  background: none;
-  border: none;
-  padding: 12px 0;
-  margin: 0;
-  width: 142px;
-  color: var(--color);
-  cursor: pointer;
-  position: relative;
-  text-align: center;
-  font: inherit;
-}
-
-.add-to-cart.clipped {
-  -webkit-clip-path: polygon(0 -80px, 100% -80px, 100% 80px, 0 80px);
-  clip-path: polygon(0 -80px, 100% -80px, 100% 80px, 0 80px);
-}
-
-.add-to-cart .background,
-.add-to-cart .cart,
-.add-to-cart .check {
-  position: absolute;
-  pointer-events: none;
-}
-
-.add-to-cart .background {
-  left: 0;
-  top: -4px;
-  right: 0;
-  bottom: 0;
-  display: block;
-  fill: var(--background);
-  transform: scale(var(--background-s)) translateZ(0);
-}
-
-.add-to-cart span {
-  position: relative;
-  z-index: 1;
-  line-height: 18px;
-  display: block;
-  font-size: 14px;
-  font-weight: 500;
-  opacity: var(--text-o);
-  transform: translateX(var(--text-x)) translateZ(0);
-}
-
-.add-to-cart .drop {
-  position: absolute;
-  z-index: 1;
-  left: 70px;
-  top: 8px;
-  width: 4px;
-  height: 4px;
-  border-radius: 50%;
-  background: var(--drop);
-}
-
-.add-to-cart .cart {
-  z-index: 2;
-  bottom: 11px;
-  left: calc(50% - 2px);
-  transform-origin: 10px 17px;
-  transform: translate(var(--cart-x), var(--cart-y)) scale(var(--cart-s)) rotate(var(--cart-r)) translateZ(0);
-}
-
-.add-to-cart .cart svg {
-  display: block;
-  width: 24px;
-  height: 19px;
-  stroke: var(--color);
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  fill: none;
-  position: relative;
-  z-index: 1;
-  transform: translateZ(0);
-}
-
-.add-to-cart .cart img {
-  display: block;
-  position: absolute;
-  bottom: 7px;
-  left: 50%;
-  opacity: var(--bottle-o);
-  transform-origin: 50% 100%;
-  transform: translate(var(--bottle-x), var(--bottle-y)) scale(var(--bottle-s)) rotate(var(--bottle-r)) translateZ(0);
-}
-
-.add-to-cart .check {
-  bottom: 0;
-  left: 50%;
-  padding: 2px;
-  background: var(--background);
-  border-radius: 50%;
-  transform: translate(-50%, var(--check-y)) scale(var(--check-s)) translateZ(0);
-}
-
-.add-to-cart .check svg {
-  display: block;
-  width: 10px;
-  height: 10px;
-  fill: none;
-  stroke-width: 1.5;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke: var(--color);
-  stroke-dasharray: 8.5px;
-  stroke-dashoffset: var(--check-offset);
-}
-
-html {
-  box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-}
-
-* {
-  box-sizing: inherit;
-}
-
-*:before,
-*:after {
-  box-sizing: inherit;
-} */
 
 /* List Order Detail */
 .orders-list {
@@ -825,7 +246,7 @@ ol span:before {
   left: 0.2em;
   top: 60%;
   margin-top: -1.3em;
-  background: #03e2ff;
+  background: #08D9D6;
   height: 2em;
   width: 2em;
   border: .3em solid #fff;
@@ -871,17 +292,19 @@ ol span:before {
 }
 
 .u-section-1 .u-list-item-1 {
-  background-color: #393E46;
-  border: 2px solid #FF2E63;
-  /* box-shadow: 0px 0px 8px 0px rgba(128,128,128,1); */
+  background: #393E46;
+  box-shadow: 0px 0px 8px 0px #FF2E63;
+  border: 2px solid transparent;
 }
 
 .u-section-1 .u-list-item-1:hover {
   background-color: #2cccc4;
-  box-shadow: 0px 0px 8px 0px rgba(128, 128, 128, 1);
+  box-shadow: 0px 0px 8px 0px #FF2E63;
+  border: 2px solid #FF2E63;
 }
 
 .u-section-1 .u-container-layout-2 {
+  text-align: center;
   padding: 0 0;
 }
 
@@ -897,7 +320,7 @@ ol span:before {
   letter-spacing: 1px;
   font-weight: 500;
   height: 70px;
-  overflow-y: scroll;
+  overflow-y: auto;
   margin: 30px 20px 0;
   color: white;
 }
